fixed word wrap for long url

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -8,6 +8,10 @@
     position:relative;
 }
 
+.bbc-news-vj-wrapper p {
+    word-wrap: break-word; // fix long links
+}
+
 .bbc-news-vj-grid-wrapper {
     position: relative;
 }
